cabal-version:      3.0
name:               tpbt
version:            0.1.0.0
synopsis:           The Pirate Bay TUI
homepage:           https://github.com/isaac025/tpbt
license:            GPL-2.0-only
license-file:       LICENSE
author:             Isaac Hiram Lopez Diaz
maintainer:         isaac.lopez@upr.com
category:           Development
build-type:         Simple
extra-doc-files:    
    CHANGELOG.md
    README.md

common warnings
    ghc-options: -Wall

executable tpbt
    import:           warnings
    main-is:          Main.hs
    other-modules:    TPB.Types
                      TPB.Monad
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
                    , brick
                    , vty
                    , microlens
                    , microlens-mtl
                    , microlens-th
                    , http-conduit
                    , mtl
                    , aeson
                    , uri-encode
                    , bytestring
                    , directory
                    , process
    hs-source-dirs:   src
    default-language: Haskell2010
