cabal-version:      3.0
name:               tpbt
version:            0.1.0.0
synopsis:           The Pirate Bay TUI
homepage:           https://github.com/isaac025/tpbt
license:            GPL-2.0-only
license-file:       LICENSE
author:             Isaac Hiram Lopez Diaz
maintainer:         isaac.lopez@upr.com
category:           Development
build-type:         Simple
extra-doc-files:    
    CHANGELOG.md
    README.md

common warnings
    ghc-options: -Wall -Werror -Wcompat -Widentities -Wincomplete-uni-patterns -Wincomplete-record-updates -Wno-unused-top-binds -Wno-orphans -Wno-error=unrecognised-warning-flags 

library
    import:           warnings
    exposed-modules:
        App
    default-extensions:
        GeneralizedNewtypeDeriving
        OverloadedStrings
    build-depends:    base ^>=4.17.2.1
                    , say
                    , directory
                    , text 
    hs-source-dirs:   src
    default-language: Haskell2010

executable tpbt
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1
                    , tpbt
    hs-source-dirs:   app
    default-language: Haskell2010
