cabal-version:      3.0
name:               tpbt
version:            0.1.0.0
synopsis:           The Pirate Bay Tui
-- description:
homepage:           https://github.com/isaac025/tpbt
license:            BSD-3-Clause
license-file:       LICENSE
author:             Isaac Hiram Lopez Diaz
maintainer:         isaac.lopez@upr.edu
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -threaded -Wall -Wcompat -O2 

executable tpbt
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    default-extensions:
        ImportQualifiedPost
        OverloadedStrings
    build-depends:    base ^>=4.17.2.1
                    , vty
                    , brick
                    , text
                    , microlens
                    , microlens-mtl
                    , microlens-th
                    , vector
    hs-source-dirs:   src
    default-language: Haskell2010
